# rs-hello-wasm

./: Cargo.toml  Readme.md  TODO.md  bindgen-cli.sh  build.sh  index.html  serve.sh  style.css
src/: board.rs  colors.rs  geometry.rs  lib.rs
src/animations/: animation.rs  cell_complete_animation.rs  flash.rs  mod.rs
src/pieces/: bar.rs  l_piece_left.rs  l_piece_right.rs  line_piece.rs  mod.rs  piece.rs  square.rs  square_piece.rs  triangle_piece.rs  z_piece_left.rs  z_piece_right.rs
