[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["bradacina <bradacina>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "*"

[dependencies.wasm-bindgen]
version = "*"
features = [
  'serde-serialize'
]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.web-sys]
version = "*"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]